force-app/main/default/objects/Correspondence__c/Correspondence__c.object-meta.xml
<CustomObject>
    <label>Correspondence</label>
    <nameField>
        <displayFormat>CORR-{00000}</displayFormat>
        <label>Correspondence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>