force-app/main/default/objects/Correspondence__c/fields/Correspondence_Date__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Date__c</fullName>
    <label>Sent/Received Date</label>
    <type>Date</type>
</CustomField>