force-app/main/default/objects/Correspondence__c/fields/Parsed_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Parsed_From_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parsed From Email</label>
    <type>Checkbox</type>
</CustomField>