force-app/main/default/objects/Correspondence__c/fields/Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>Responded_Date__c</fullName>
    <label>Responded Date</label>
    <type>Date</type>
</CustomField>