force-app/main/default/objects/Correspondence__c/fields/Response_Days__c.field-meta.xml
<CustomField>
    <fullName>Response_Days__c</fullName>
    <formula>IF(OR(ISBLANK(Responded_Date__c), ISBLANK(Correspondence_Date__c)), null, Responded_Date__c - Correspondence_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Days Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>