force-app/main/default/objects/Correspondence__c/fields/Response_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Response_Days_Remaining__c</fullName>
    <formula>IF(ISBLANK(Response_Due_Date__c), null, Response_Due_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>