force-app/main/default/objects/Correspondence__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Request for Evidence</fullName>
            </value>
            <value>
                <fullName>Interview Notice</fullName>
            </value>
            <value>
                <fullName>Biometrics Notice</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>